client/templates/contacts/contacts.import.less
.contacts {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 200px;
  background: @light-blue;
  .m-bar {
    position: absolute;
    bottom: 0;
    display: flex;
    align-items: center;
    width: 100%;
    height: 40px;
    // padding-left: 15px;
  }
  &.contacts-expanded {
    height: 100%;
    ul {
      list-style-type: none;
      padding: 0;
      li {
        display: flex;
        height: 60px;
        align-items: center;
      }
    }
    .m-bar {
      background: white;
      height: 30px;
      display: flex;
      input {
        padding: 0;
        height: 100%;
        flex-grow: 1;
      }
      i {
        margin: 0;
        padding: 0 12px;
      }
    }
  }
  &.contacts-folded {
    height: 40px;
    padding-left: 15px;
  }
  i {
    font-size: 21px;
    margin-right: 8px;
  }
}

